# stun_client_plugin

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/stun_client/: StunClientPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/stun_client_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: stun_client.podspec
ios/Classes/: StunClientPlugin.h  StunClientPlugin.m  SwiftStunClientPlugin.swift
lib/: stun_client.dart
native/: Cargo.toml  cbindgen.toml  rs-lib-android-build-debug.sh  rs-lib-android-build.sh
native/src/: error.rs  ffi.rs  lib.rs  message.rs
test/: stun_client_test.dart
test_native/: binding.h  stunc.h
test_native/src/: main.c
