[package]
name = "stun-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "stunc"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log4rs = "*"
rand = "0.8.3"

[build-dependencies]
cbindgen = "0.1.29"
